# lumos

./: README.md  eu.ichibi.Lumos.json  meson.build
data/: eu.ichibi.Lumos.desktop.in  eu.ichibi.Lumos.gschema.xml  eu.ichibi.Lumos.metainfo.xml.in  meson.build  resources.gresource.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: ev_calculator.py  lumos.gresource.xml  lumos.in  main.py  meson.build  sensors_polling_timer.py  style.css  window.py  window.ui
src/widgets/: aperture_priority_page.py  aperture_priority_page.ui  manual_exposure_page.py  manual_exposure_page.ui  sensor_readings_page.py  sensor_readings_page.ui  time_priority_page.py  time_priority_page.ui  widgets_loader.py
